# pypiserver

./: .coveragerc  .dev.env  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .project.sample  .pydocstyle  .pylintrc  .travis-runtox.py  .travis.yml  AUTHORS.rst  CHANGES.rst  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README_wip.md  bootstrap.py  buildout.cfg  commit-standalone  config.py  conftest.py  core.py  dependabot.yml  docker-compose.yml  docker-requirements.txt  entrypoint.sh  gen-standalone.py  make-manifest  make_manifest.py  pypi-server  pypi-server-in.py  pypi-server-standalone.py  pyproject.toml  run.py  setup.cfg  setup.py  (+1 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  rc.yml  release.yml  rls.yml  rt.yml  test.yml
contributor_docs/: README.md  architecture_overview.md
doc/: contributing.md  design-doc.md  version-2.md
docker/: README.md  docker-requirements.txt  entrypoint.sh  gunicorn.conf.py  test_docker.py
docker/tests/: README.md  test_docker.py
docs/: README.md
docs/contents/repo-maintenance/: release-work.md
fixtures/: README.md
fixtures/mypkg/: setup.cfg  setup.py
fixtures/mypkg/mypkg/: __init__.py
fixtures/mypkg_heavy/: setup.cfg  setup.py
fixtures/mypkg_heavy/mypkg_heavy/: .gitignore  __init__.py  __placeholder__.py
fixtures/mypkg_heavy/mypkg_heavy/heavy_lib/: __init__.py
itests/: __init__.py  simple_pkg.py  test_pypiserver.py
pypiserver/: __init__.py  __main__.py  _app.py  _version.py  backend.py  bottle.py  cache.py  config.py  const.py  core.py  environment.py  htpasswd_utils.py  manage.py  paste.py  pkg_helpers.py  plugin.py  plugins.py  pypiserver_app.py  upload_time.py  welcome.html
pypiserver/bottle_wrapper/: __init__.py  bottle.py
pypiserver/community/appengine/: __init__.py  logger.py  plugin.py  settings.py  storage.py
pypiserver/plugins/: interface.py  util.py
pypiserver/plugins/authenticators/: htpasswd.py  interface.py  no_auth.py
pypiserver/template/: packages.tpl  pypiindex.tpl  pypipkg.tpl  simple.tpl  simpleprefix.tpl  welcome.tpl
pypiserver/templates/: index.tpl  layout.tpl  packages.tpl
requirements/: appengine.dev.pip  appengine.exe.pip  build.txt  dev.pip  dev.txt  exe.pip  run.txt  test-requirements.txt  test.pip  test.txt
scripts/opensuse/: pypiserver  pypiserver.init
scripts/ubuntu/: pypiserver.init
src/pypiserver/: __init__.py  immutable.py  info.py  main.py  optimization.py
src/pypiserver/cli/: __init__.py
src/pypiserver/conf/: command.py  config.py  option.py  parser.py  source.py
src/pypiserver/conf/parsers/: __init__.py  interface.py
src/pypiserver/config/: __init__.py  option.py
src/pypiserver/core/: __init__.py  package.py
src/pypiserver/handlers/: __init__.py
src/pypiserver/interfaces/: __init__.py  package.py  store.py
src/pypiserver/models/: __init__.py  compliance.py  package.py
src/pypiserver/stores/: __init__.py  async_util.py  fs.py
tests/: centodeps-setup.py  doubles.py  sample_msg.html  test-ignorelist  test_api.py  test_app.py  test_backend.py  test_config.py  test_core.py  test_docs.py  test_environment.py  test_init.py  test_main.py  test_manage.py  test_paste.py  test_pep708_backend_implementation.py  test_pep708_comprehensive.py  test_pkg_helpers.py  test_plugins.py  test_salt_validation.py  test_server.py  test_upload_time.py
tests/centodeps/: .gitignore  setup.py
tests/centodeps/wheelhouse/: .gitignore  centodeps-0.0.0-cp34-none-win_amd64.whl
tests/community/appengine/: test_plugin.py  test_storage.py
tests/integration/: __init__.py  test_pypiserver.py
tests/integration/files/: simple_pkg-0.0.0-py2.py3-none-any.whl  simple_pkg-0.0.0.dev0-py2.py3-none-any.whl
tests/plugins/: .gitignore  README.rst  pps_installable.py  pps_loadable.py  setup.py
tests/unit/: doubles.py  test_immutable.py  test_optimization.py  test_test.py
tests/unit/conf/: test_options.py  test_source.py
tests/unit/core/: test_compliance.py
tests/unit/models/: test_compliance.py
tmp/: .notes.txt
