[project]
name = "pypiserver"
dynamic = ["version"]
description = "A minimal PyPI server for use with pip/easy_install."
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: BSD License",
  "License :: OSI Approved :: zlib/libpng License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Software Distribution",
]
# the chronology of the project's core authors
authors = [
  { name = "Ralf Schmitt", email = "ralf@systemexit.de" },
  { name = "Kostis Anagnostopoulos", email = "ankostis@gmail.com" },
  { name = "Matthew Planchard", email = "mplanchard@gmail.com" },
  { name = "Dmitrii (Mitja) Orlov", email = "dmtree.dev@yahoo.com" },
]
# the currently active core maintainers
maintainers = [
  { name = "Dmitrii (Mitja) Orlov", email = "dmtree.dev@yahoo.com" },
  { name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr" },
]
license = { file = "LICENSE.txt" }

# --- Dependencies ---

dependencies = [
  "importlib-resources>=6.5.2 ; python_full_version >= '3.10' and python_full_version < '3.12'",
  "legacy-cgi>=2.6.4 ; python_full_version >= '3.13'",
  "packaging>=26.0",
  "pip>=26.0.1",
]

[project.optional-dependencies]
passlib = ["passlib>=1.6"]
cache = ["watchdog>=6.0.0"]

# --- Extra metadata ---

[project.urls]
homepage = "https://github.com/pypiserver/pypiserver"
source = "https://github.com/pypiserver/pypiserver"
changelog = "https://github.com/pypiserver/pypiserver/blob/main/CHANGES.rst"
issues = "https://github.com/pypiserver/pypiserver/issues"

# --- Entrypoints ---

[project.scripts]
pypi-server = "pypiserver.__main__:main"

[project.entry-points."paste.app_factory"]
main = "pypiserver:paste_app_factory"

# --- Build system ---

[build-system]
# Minimum requirements for the build system to execute.
# requires = ["setuptools", "wheel"] # PEP 508 specifications.
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pypiserver/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pypiserver"]

[tool.hatch.build.targets.sdist]
include = ["/pypiserver", "/README.md", "/LICENSE.txt"]

# --- Development tools ---

[tool.black]
# Configuration for the Black autoformatter
line-length = 80
target-version = ['py36']
exclude = '''
(
  /(
      \.direnv
    | \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.vscode
    | _build
    | build
    | dist
    | venv
    | pypiserver/bottle_wrapper/bottle.py
  )
)
'''

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ['tests.*', 'test_docker.*']
disallow_untyped_decorators = false

# --- Dev dependencies ---

[dependency-groups]
dev = [
  "black>=26.1.0",
  "docopt>=0.6.2",
  "mypy>=1.19.1 ; implementation_name == 'cpython'",
  "types-setuptools>=82.0.0.20260210",
]
test = [
  "build>=1.2.0 ; python_full_version >= '3.10'",
  "gevent>=1.1b4 ; python_full_version >= '3'",
  "httpx>=0.28.1",
  "mdformat-footnote>=0.1.3",
  "mdformat-frontmatter>=2.0.10",
  "mdformat-gfm>=1.0.0",
  "passlib>=1.6",
  "pip>=26.0.1",
  "pytest>=6.2.2",
  "pytest-cov>=7.0.0",
  "setuptools>=40.0,<81.0.0",
  "tox>=4.48.1",
  "twine>=6.2.0",
  "webtest>=3.0.7",
  "wheel>=0.25.0",
]
