[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[tool.ruff]
line-length = 80
exclude =  [
    '.direnv',
    '.eggs',         # exclude a few common directories in the
    '.git',          # root of the project
    '.mypy_cache',
    '.tox',
    '.venv',
    '.vscode',
    '_build',
    'build',
    'dist',
    'venv',
    'pypiserver/bottle_wrapper/bottle.py'
]
[tool.ruff.lint]
extend-select = [
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    'tests.*',
    'test_docker.*',
]
disallow_untyped_decorators = false
